# python_study

./: .dockerignore  .gitignore  Dockerfile  package.json  pyproject.toml
python-study/: Chart.yaml  values.yaml
python-study/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
python-study/templates/tests/: test-connection.yaml
sql/: 001_create_users.sql
src/: data_models.py  main.py
src/api/: lifespan.py  routes.py
src/repository/: migrate.py  pg.py  repository.py
src/service/: user.py
test/: test_leet_code.py  test_repository.py
