[project]
name = "sutdy"
version = "0.0.1"
description = "studio"
requires-python = "~=3.11.0"

dependencies = [
    "asyncpg>=0.27.0,<0.28",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.135.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
